# deeddiff

./: .gitignore  LICENSE  NOTICES.md  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml
docs/: manual-testing.md  prerequisites.md
scripts/: compare.ts  copy-wasm.ts  make-fixtures.ts
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: error.rs  lib.rs  main.rs  ollama.rs  pdf.rs
src-tauri/tests/: backend.rs  ollama_http.rs
src-tauri/tests/fixtures/: lit_output.json
src/components/: ClauseNotesPanel.tsx  ComparisonPanel.tsx  ErrorBoundary.tsx  ModelSelector.tsx  RedlineViewer.tsx  VersionPicker.tsx
src/lib/: buildDocx.test.ts  buildDocx.ts  clausePairs.test.ts  clausePairs.ts  cli.integration.test.ts  documentDiff.test.ts  documentDiff.ts  docxodus.integration.test.ts  docxodus.test.ts  docxodus.ts  ingest.test.ts  ingest.ts  notes.ts  ollama.test.ts  ollama.ts  pipeline.integration.test.ts  platform.ts  promptFormat.test.ts  report.test.ts  report.ts  types.ts  wasmCheck.ts
tests/fixtures/: contract-A.docx  contract-B.docx
