[package]
name = "deeddiff"
version = "0.1.0"
description = "Local-first DOCX redline with AI clause notes"
authors = ["deeddiff"]
edition = "2021"
rust-version = "1.77"

# The library that the binary entry point and integration tests link against.
[lib]
name = "deeddiff_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# rustls-tls avoids a system OpenSSL dependency on Linux builds. Ollama is
# localhost-only so TLS is not strictly needed, but rustls keeps the default safe.
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1", features = ["process", "io-util", "time", "macros", "rt-multi-thread"] }
thiserror = "2"

[dev-dependencies]
# For the HTTP integration tests (#[tokio::test]). Same version/features as the
# runtime dependency above, so this adds no new crates to the lockfile.
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[features]
# This feature is used for production builds or when a dev server is not specified,
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
